[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/npcs/Serek.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/characters/town citizens/Fem. Citizens/Khali/Khali.png" type="Texture" id=2]
[ext_resource path="res://src/interface/Images/quote-box.png" type="Texture" id=3]
[ext_resource path="res://src/interface/DialogBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/sprites/characters/town citizens/Masc. Citizens/Serek/Serek.png" type="Texture" id=5]
[ext_resource path="res://src/interface/Store.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 96, 448, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "win",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 71.0

[node name="Serek" type="Area2D" groups=["minimap_objects"]]
scale = Vector2( 2, 2 )
z_index = 2
z_as_relative = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibleArea"]
shape = SubResource( 7 )

[node name="msg" type="Sprite" parent="."]
visible = false
position = Vector2( 39, -43 )
scale = Vector2( 0.125, 0.125 )
z_index = 1
texture = ExtResource( 3 )

[node name="DialogBox" parent="." instance=ExtResource( 4 )]

[node name="CanvasStore" type="CanvasLayer" parent="."]

[node name="Store" parent="CanvasStore" instance=ExtResource( 6 )]
visible = false

[connection signal="area_entered" from="VisibleArea" to="." method="_on_VisibleArea_area_entered"]
[connection signal="area_exited" from="VisibleArea" to="." method="_on_VisibleArea_area_exited"]
[connection signal="body_entered" from="VisibleArea" to="." method="_on_VisibleArea_body_entered"]
[connection signal="body_exited" from="VisibleArea" to="." method="_on_VisibleArea_body_exited"]
